Add Windows example for Demo1 for consistency
Co-authored-by: crramirez <8397379+crramirez@users.noreply.github.com>